# streamhouse

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: bench.rs
src/: column.rs  error.rs  lib.rs  query.rs  row.rs  stream.rs  types.rs
streamhouse-derive/: Cargo.toml
streamhouse-derive/src/: column.rs  lib.rs  row.rs
tests/: column_derive.rs  common.rs  connection.rs  datetime.rs  insert_long_rows.rs  newtype.rs  stream.rs  types.rs
