[package]
name = "streamhouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.26", features = ["client", "http2", "http1", "tcp"]}
thiserror = "1.0.40"
streamhouse-derive = { path = "streamhouse-derive" }

[dev-dependencies]
function_name = "0.3.0"
tokio = { version = "1.28.2", features = ["rt", "macros"]}
