[package]
name = "streamhouse"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.26", features = ["client", "http2", "http1", "tcp", "stream"]}
thiserror = "1.0.40"
streamhouse-derive = { path = "streamhouse-derive" }
futures-util = "0.3.28"

[dev-dependencies]
function_name = "0.3.0"
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"]}

clickhouse = { version = "0.11.3", features = ["test-util", "lz4"] }
clickhouse-rs = { git = "https://github.com/droundy/clickhouse-rs.git", branch = "async-await" }
serde = { version = "1.0.147", features = ["rc", "derive"] }
url = { version = "2.2.2", features = ["serde"] }
rand = "0.8.5"

[workspace]

members = [
   "streamhouse-derive",
]

[[bench]]
name = "bench"
harness = false