[package]
name = "streamhouse-derive"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
