[package]
name = "streamhouse-derive"
version = "0.0.1"
edition = "2021"
authors = ["David Roundy <daveroundy@gmail.com>"]

description = "The derive macro crate for streamhouse"
license = "MIT OR Apache-2.0"
repository = "https://github.com/droundy/streamhouse"

categories = ["caching", "memory-management", "concurrency"]
keywords = ["clickhouse", "database", "driver", "hyper", "tokio"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
